# trees

./: .gitignore  AUTHORS  ChangeLog  Makefile  README.md  configure.ac
m4/: dovecot.m4
src/: Makefile.am  scrambler-common.c  scrambler-common.h  scrambler-istream.c  scrambler-istream.h  scrambler-ostream.c  scrambler-ostream.h  scrambler-plugin.c  scrambler-plugin.h  trees-common.c  trees-common.h  trees-istream.c  trees-istream.h  trees-ostream.c  trees-ostream.h  trees-plugin.c  trees-plugin.h
vagrant/: README.md  Vagrantfile
vagrant/ansible/: playbook.yml
vagrant/ansible/roles/dovecot/handlers/: main.yml
vagrant/ansible/roles/dovecot/tasks/: install.yml  install_dovecot_libsodium_plugin.yml  main.yml
vagrant/ansible/roles/dovecot/templates/: dovecot-sql.conf.ext.j2  dovecot.conf.j2
vagrant/ansible/roles/dovecot/templates/dovecot/conf.d/: 10-mail.conf.j2  10-master.conf.j2  10-ssl.conf.j2  15-mailboxes.conf.j2  auth-sql.conf.ext.j2
vagrant/ansible/roles/init/tasks/: main.yml
vagrant/ansible/roles/jnv.debian-backports/meta/: .galaxy_install_info
vagrant/ansible/roles/mariadb/tasks/: main.yml
vagrant/ansible/roles/mariadb/templates/: database_scheme.sql.j2
vagrant/ansible/roles/postfix/handlers/: main.yml
vagrant/ansible/roles/postfix/tasks/: main.yml
vagrant/ansible/roles/postfix/templates/: main.cf.j2  master.cf.j2  mysql-virtual-alias-maps.cf  mysql-virtual-mailbox-domains.cf  mysql-virtual-mailbox-maps.cf
vagrant/ansible/roles/trees/tasks/: create_users.yml  install.yml  main.yml
